--- a/FRONTEND_AnaQuispe/src/app/components/banner/banner.component.html
+++ b/FRONTEND_AnaQuispe/src/app/components/banner/banner.component.html
@@ -1,1 +1,1 @@
-<a href=""><img src="../../../assets/banner.jpg" alt="banner"></a>
+<a href=""><img src="../../../assets/banner..png" alt="banner"></a>
