--- a/FRONTEND_AnaQuispe/src/app/components/header/header.component.css
+++ b/FRONTEND_AnaQuispe/src/app/components/header/header.component.css
@@ -1,8 +1,9 @@
 div{
-    background-color: #cc00ff;
+    background-color: #8643F4;
 }
 
 app-social{
     float: right;
     margin-top: 25px;
 }
+
