--- a/FRONTEND_AnaQuispe/src/app/components/header/header.component.html
+++ b/FRONTEND_AnaQuispe/src/app/components/header/header.component.html
@@ -1,7 +1,5 @@
-<div class="row">
-    <app-logo-ap></app-logo-ap>
+<div>
     <app-banner></app-banner>
+    <app-logo-ap></app-logo-ap>
     <app-social></app-social>
 </div>
-
-
