--- a/FRONTEND_AnaQuispe/src/app/app.component.html
+++ b/FRONTEND_AnaQuispe/src/app/app.component.html
@@ -1,4 +1,5 @@
-/*<app-header></app-header>
+<app-header></app-header>
 <app-sobremi></app-sobremi>
-<app-banner></app-banner>*/
+<app-experiencia></app-experiencia>
+<app-educacion></app-educacion>
 
