--- a/FRONTEND_AnaQuispe/src/app/app.component.html
+++ b/FRONTEND_AnaQuispe/src/app/app.component.html
@@ -2,4 +2,6 @@
 <app-sobremi></app-sobremi>
 <app-experiencia></app-experiencia>
 <app-educacion></app-educacion>
+<app-hys></app-hys>
+<app-proyecto></app-proyecto>
 
