--- a/FRONTEND_AnaQuispe/src/app/components/proyecto/proyecto.component.html
+++ b/FRONTEND_AnaQuispe/src/app/components/proyecto/proyecto.component.html
@@ -6,7 +6,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A eos veniam distinctio officia excepturi? Officia, ipsam? Optio quo, vero alias eum natus sunt officia maiores eos est molestiae harum voluptatibus?</p>   
         </div>
         <div class="col-sm-12 col-md-3 col-lg-3 offset-md-1 offset-lg-1 parte2">
-            <img src="../../../assets/encriptador.png" class="img-fluid img-proyecto">
+            <img src="../../../assets/encriptador.gif" class="img-fluid img-proyecto">
         </div>
     </div>
 </div>
@@ -21,7 +21,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores cum quo, nisi consequuntur, rerum, praesentium et nostrum eius reiciendis obcaecati at recusandae tempora cumque sint quae! Consequatur ipsa aspernatur nulla!</p>
             </div>
             <div class="col-sm-12 col-md-3 col-lg-3 offset-md-1 offset-lg-1 parte2">
-                <img src="../../../assets/encriptador.png" class="img-fluid img-proyecto" >
+                <img src="../../../assets/encriptador.gif" class="img-fluid img-proyecto" >
             </div>
         </div>
     </div>
