--- a/FRONTEND_AnaQuispe/src/app/components/footer/footer.component.html
+++ b/FRONTEND_AnaQuispe/src/app/components/footer/footer.component.html
@@ -1,1 +1,6 @@
-<p>footer works!</p>
+<div class="row">
+    <footer>
+        <p>Quispe Ana Laura | © Argentina Programa 2022</p>
+        <p>Mendoza, Argentina</p>
+    </footer>
+</div>
