--- a/FRONTEND_AnaQuispe/src/app/components/hys/hys.component.html
+++ b/FRONTEND_AnaQuispe/src/app/components/hys/hys.component.html
@@ -3,12 +3,12 @@
 
     <div class="text-center col-sm-4 col-md-4 col-lg-4 circulo">
         <circle-progress
-        [percent]="85"
+        [percent]="80"
         [radius]="100"
         [imageSrc]="'../../assets/html.png'"
         [showImage]="true"
-        [imageHeight]="70"
-        [imageWidth]="70" 
+        [imageHeight]="90"
+        [imageWidth]="90" 
         [outerStrokeWidth]="16"
         [innerStrokeWidth]="5"
         [outerStrokeColor]="'#6FCFF3'"
@@ -20,12 +20,12 @@
 
     <div class="text-center col-sm-4 col-md-4 col-lg-4 circulo">
         <circle-progress
-        [percent]="85"
+        [percent]="50"
         [radius]="100"
         [imageSrc]="'../../assets/js.png'"
         [showImage]="true"
-        [imageHeight]="70"
-        [imageWidth]="70" 
+        [imageHeight]="90"
+        [imageWidth]="90" 
         [outerStrokeWidth]="16"
         [innerStrokeWidth]="5"
         [outerStrokeColor]="'#6FCFF3'"
@@ -37,12 +37,12 @@
 
     <div class="text-center col-sm-4 col-md-4 col-lg-4 circulo">
         <circle-progress
-        [percent]="85"
+        [percent]="60"
         [radius]="100"
         [imageSrc]="'../../assets/CSS.png'"
         [showImage]="true"
-        [imageHeight]="70"
-        [imageWidth]="70" 
+        [imageHeight]="90"
+        [imageWidth]="90" 
         [outerStrokeWidth]="16"
         [innerStrokeWidth]="5"
         [outerStrokeColor]="'#6FCFF3'"
@@ -54,12 +54,12 @@
 
     <div class="text-center col-sm-4 col-md-4 col-lg-4 circulo">
         <circle-progress
-        [percent]="85"
+        [percent]="80"
         [radius]="100"
         [imageSrc]="'../../assets/git.png'"
         [showImage]="true"
-        [imageHeight]="70"
-        [imageWidth]="70" 
+        [imageHeight]="90"
+        [imageWidth]="90" 
         [outerStrokeWidth]="16"
         [innerStrokeWidth]="5"
         [outerStrokeColor]="'#6FCFF3'"
@@ -71,12 +71,12 @@
 
     <div class="text-center col-sm-4 col-md-4 col-lg-4 circulo">
         <circle-progress
-        [percent]="85"
+        [percent]="100"
         [radius]="100"
         [imageSrc]="'../../assets/grupal.png'"
         [showImage]="true"
-        [imageHeight]="70"
-        [imageWidth]="70" 
+        [imageHeight]="90"
+        [imageWidth]="90" 
         [outerStrokeWidth]="16"
         [innerStrokeWidth]="5"
         [outerStrokeColor]="'#6FCFF3'"
@@ -88,10 +88,10 @@
 
     <div class="text-center col-sm-4 col-md-4 col-lg-4 circulo">
         <circle-progress
-        [percent]="85"
+        [percent]="75"
         [radius]="100"
         [title]="'English'"
-        [titleColor]="black"
+        [titleColor]="'#000000'"
         [titleFontSize]="'3em'"
         [showTitle]="true"
         [showUnits]="false"
@@ -99,8 +99,8 @@
         [showImage]="false"  
         [imageSrc]="'../../assets/.png'"
         [showImage]="true"
-        [imageHeight]="70"
-        [imageWidth]="70" 
+        [imageHeight]="90"
+        [imageWidth]="90" 
         [outerStrokeWidth]="16"
         [innerStrokeWidth]="5"
         [outerStrokeColor]="'#6FCFF3'"
