--- a/FRONTEND_AnaQuispe/src/app/components/sobremi/sobremi.component.css
+++ b/FRONTEND_AnaQuispe/src/app/components/sobremi/sobremi.component.css
@@ -11,7 +11,7 @@ div{
         position: absolute;
         width: 15%;
         border-radius: 100%;
-        box-shadow: 3px 3px 3px grey;
+        box-shadow: 3px 3px 3px #5E17EB;
         left: 3%;
         top:550px;
     }
@@ -21,7 +21,7 @@ div{
         position: absolute;
         width: 30%;
         border-radius: 100%;
-        box-shadow: 3px 3px 3px grey;
+        box-shadow: 3px 3px 3px #5E17EB;
         left: 33%;
         top:950px;
     }
