--- a/FRONTEND_AnaQuispe/src/app/components/logo-ap/logo-ap.component.html
+++ b/FRONTEND_AnaQuispe/src/app/components/logo-ap/logo-ap.component.html
@@ -1,1 +1,17 @@
-<img src="../../../assets/APLogo.png" id="logoAP">
+<div class="row">
+    <div class="container">
+
+        <div class="logo">
+            <img src="../../../assets/APLogo.png" id="logoAP">
+        </div>
+
+        <div class="redes">
+            <a href=""><img src="../../../assets/github.png" id="linkedin"></a>
+            <a href=""><img src="../../../assets/linkedin.png" id="github"></a>
+            <button type="button" class="btn btn-outline-light">INGRESO</button>  
+        </div>
+
+    </div>
+
+</div>
+
